--- a/assets/html/navBar.html
+++ b/assets/html/navBar.html
@@ -2,14 +2,14 @@
 <!-- <li><a href="https://www.linkedin.com/in/james-oh-b41a82215/" target="_black">Profile</a></li> -->
 <li><a href="profile"> Profile</a></li>
 <!-- <li><a href="photos.html"> Photos</a></li> -->
-<li><a href="photos"> Photos</a>
+<!-- <li><a href="photos"> Photos</a>
     <ul>
         <li><a href="rashi">Rashi</a></li>
     </ul>
     <ul>
         <li><a href="timeline">Timeline</a></li>
-    </ul>
-</li>
+    </ul> -->
+<!-- </li> -->
 <li><a href="applications">Applications</a>
     <ul>
         <li><a href="tetris"> Tetris</a></li>
