--- a/profile.html
+++ b/profile.html
@@ -71,6 +71,22 @@
                 </p>
             </div>
         </div>
+        <button type="button" class="biobutton collapsible">Blog Postings</button>
+        <div class="content">
+            <div id="bioBox">
+                <ul>
+                    <li><a class="whiteLink" href="https://velog.io/@fldhs2012/Appium-ADB를-이용해-안드로이드-장비-무선으로-연결하기"> - Appium-ADB를 이용해 안드로이드 장비 무선으로 연결하기</a></li>
+                    <br>
+                    <li><a class="whiteLink" href="https://velog.io/@fldhs2012/Deep-link를-활용해-비-시나리오-기반-모바일-자동화-테스트를-수행하기"> - Deep-link를 활용해 비 시나리오 기반 모바일 자동화 테스트를 수행하기</a></li>
+                    <br>
+                    <li><a class="whiteLink" href="https://velog.io/@fldhs2012/Deep-link를-활용해-비-시나리오-기반-모바일-자동화-테스트를-수행하기-2"> - Deep-link를 활용해 비 시나리오 기반 모바일 자동화 테스트를 수행하기 2</a></li>
+                    <br>
+                    <li><a class="whiteLink" href="https://velog.io/@fldhs2012/Software-Development-Engineer-in-TestSDET-이란"> - Software Development Engineer in Test (SDET) 이란</a></li>
+                    <br>
+                    <li><a class="whiteLink" href="https://velog.io/@fldhs2012/UiSelector로-텍스트-기반-엘리먼트-찾기-부제-Cannot-set-AccessibilityNodeInfos-field-mSealed-to-true-해결"> - UiSelector로 텍스트 기반 엘리먼트 찾기</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
     <script src="assets/js/collapsible.js"></script>
 
