fixed score size

--- a/2048.html
+++ b/2048.html
@@ -80,7 +80,7 @@
             font-size: 2vmin; /* Base font size */
         }
         #score {
-            font-size: 3vh;
+            font-size: 5vh;
             margin-bottom: 2vh;
             color: #bbada0;
         }
@@ -321,7 +321,7 @@
             gameBoard.style.height = `${maxSize}px`;
             
             title.style.fontSize = `${maxSize / 10}px`;
-            score.style.fontSize = `${maxSize / 20}px`;
+            // score.style.fontSize = `${maxSize / 20}px`;
             buttons.querySelectorAll('button').forEach(button => {
                 button.style.fontSize = `${maxSize / 25}px`;
             });
