added 5mok game

--- a/assets/html/navBar.html
+++ b/assets/html/navBar.html
@@ -20,6 +20,12 @@
     <ul>
         <li><a href="connect4">Connect4</a></li>
     </ul>
+    <ul>
+        <li><a href="2048">2048</a></li>
+    </ul>
+    <ul>
+        <li><a href="5-Mok">5-mok</a></li>
+    </ul>
 </li>
 <li><a href="studies">Studies</a>
     <ul>
