--- a/tetris.html
+++ b/tetris.html
@@ -41,7 +41,10 @@
                 </button>
                 <button class="resume-button">Resume</button>
             </div>
-            <div class="score"> Score: 0</div>
+            <div id="score-wrapper">
+                <div class="score"> Score: 0</div>
+                <div class="score best-score">Best Score: 0</div>
+            </div>
             <div class="info"> <span class="stage"> Stage: 1</span> <span class="next-level">Next Level: 10</span> <span
                     id="next">Next Block: </span></div>
             <div><span class="playground">
